Limits the velocity on the y axis.